chore: remove options not supported by java 17