@@ -8,7 +8,7 @@ $ heroku login
 $ heroku apps:create [APP]
 $ heroku config:set SPRING_PROFILES_ACTIVE=prod
 $ heroku config:set TZ=Asia/Tokyo
-$ heroku config:set 'JAVA_OPTS=-XX:+UseCompressedOops -XX:+UseStringDeduplication --illegal-access=deny'
+$ heroku config:set 'JAVA_OPTS=-XX:+UseCompressedOops -XX:+UseStringDeduplication'
 
 # Setup Redis
 $ heroku addons:create heroku-redis:hobby-dev
